# python-project

./: .buildinfo  .bumpversion.cfg  .coveragerc  .pre-commit-config.yaml  LICENSE  README.md  README.rst  cookiecutter-server.json  cookiecutter.json  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: a_bug_report.yaml  b_feature_request.yaml  c_cookiecutter_request.yaml  d_documentation.yaml  e_ux_feddback.yaml
.github/workflows/: test.yaml
hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.py  pre_gen_project.sh
project_name/: _metadata.py
{{cookiecutter.project_name}}/: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: pre-commit.yaml  test.yaml
{{cookiecutter.project_name}}/docs/src/: conf.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: _metadata.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/: ci.yaml
{{cookiecutter.project_slug}}/.github/actions/setup/: action.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci-docs.yml  ci-security.yml  ci-testing-unit.yml  ci.yaml  code-quality.yml  docs.yml  security.yml  test.yml
{{cookiecutter.project_slug}}/docs/: about.md  index.md
{{cookiecutter.project_slug}}/docs/community/: contribute-codebase.md  contribute-docs.md  contribute.md  index.md
{{cookiecutter.project_slug}}/docs/reference/source/{{ cookiecutter.package_name }}/: _metadata-docs.md
{{cookiecutter.project_slug}}/docs/src/: conf.py  index.rst
{{cookiecutter.project_slug}}/tests/: test_placeholder.py  test_twentythree.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  _metadata.py
